<resources>
    <string name="app_name">VPS</string>
    <string name="action_settings">Settings</string>
    <string name="current_mission">CURRENT MISSION</string>
    <string name="daynamesingle">days</string>
    <string name="daynameplural">day</string>
    <string name="hourabbrev">h</string>
    <string name="other_missions">OTHER MISSIONS</string>
    <string name="date">Date</string>
    <string name="driver">Convoy leader</string>
    <string name="journey">Journey</string>
    <string name="estimated_duration">Estimated duration</string>
    <string name="login_failed">Login failed</string>
    <string name="invalid_user">Invalid user name</string>
    <string name="invalid_password">Invalid password</string>
    <string name="authent">Authenticating…</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="title_activity_mission">Mission</string>
    <string name="transporter_name">Transporter name</string>
    <string name="order">Order #</string>
    <string name="phone_number">Phone number</string>
    <string name="phone">Phone</string>
    <string name="dimensions">PxLxlxH</string>
    <string name="category">Category</string>
    <string name="_1st">1st</string>
    <string name="_2nd">2nd</string>
    <string name="_3rd">3rd</string>
    <string name="journey_informations">Journey informations</string>
    <string name="departure">Departure</string>
    <string name="arrival">Arrival</string>
    <string name="estimated_time_of_departure">Requested date and time of departure</string>
    <string name="departure_comments">Departure comments</string>
    <string name="ot_number">OT number</string>
    <string name="status">Status</string>
    <string name="discharge">Signed discharge</string>
    <string name="in_progress">In progress</string>
    <string name="to_driving_status">Changing to DRIVING status</string>
    <string name="to_working_status">Changing to WORKING status</string>
    <string name="to_onboard_status">Changing to ON-BOARD status</string>
    <string name="to_resting_status">Changing to HAVING A REST status</string>
    <string name="do_not_use">Don\'t use this</string>
    <string name="error_file_sig">Couldn\'t create signature file. Please use paper.</string>
    <string name="validate">Validate</string>
    <string name="order_number">order number</string>
    <string name="vehicle_registration">Vehicle registration</string>
    <string name="tr">TR</string>
    <string name="sr">SR</string>
    <string name="firstname_and_last_name">Firstname and last name</string>
    <string name="p">D</string>
    <string name="l">L</string>
    <string name="lmin">w</string>
    <string name="h">H</string>
    <string name="requested_time_and_date">Requested time and date</string>
    <string name="arrival_km">Arrival Km</string>
    <string name="departure_km">Departure Km</string>
    <string name="approach_km">Approach Km</string>
    <string name="total_km">Total Km</string>
    <string name="start_curr_miss">Are you sure you want to start current mission ?</string>
    <string name="switch_miss">Are you sure you want to finish this mission and switch to another ?</string>
    <string name="finish_curr_miss">Are you sure you want to finish this mission ?</string>
    <string name="mission_status">Mission status</string>
    <string name="transporter_informations">Transporter</string>
    <string name="pending">Pending</string>
    <string name="finished">Finished</string>
</resources>
